# orbital_sim

./: .gitignore  3dplot.py  CMakeLists.txt  README.md  build_quaternion.sh  build_rk4.sh  earth.py  main.cpp  parse.txt  quaternion.elf  quaternion.hpp  rk4  rk4.cpp  testargs  testargtemplates.cpp  testtuple.cpp
example_results/: orbital_sim_plot.m
example_results/random/: rng_state.txt
example_results/trajectory/: groundstation.txt
include/: sv_swig.hpp
lib/: rsa.cpp
lib/Quaternion/: CMakeLists.txt  README.md
lib/Quaternion/example/: main.cpp
lib/Quaternion/include/: Quaternion.hpp  Vector3.hpp
lib/Quaternion/script/: orbit.py  testquat.py
lib/Quaternion/swig/: Quaternion.i
lib/crypt/: rsa.cpp  rsa.elf
lib/network/: README.md  ex  ex.cpp  graph.dot  network  network.cpp
lib/rk4/: CMakeLists.txt  README.md
lib/rk4/example/: rk4_example.cpp
lib/rk4/include/: rk4.hpp  rk4_swig.hpp
lib/rk4/script/: rk4_example.py  rk4_plot.m  rk4_plot.py
lib/rk4/src/: rk4.cpp
lib/rk4/swig/: rk4.i
script/: orbital_sim_impl.py  orbital_sim_plot.m
src/: sv.cpp
swig/: orbital_sim.i
